[package]
name = "st-image"
version = "0.3.7"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
failure = "0.1"
gdal = { path = "../gdal" }
gdal-sys = { path = "../gdal/gdal-sys" }
