[package]
name = "st-image"
version = "0.3.9"
authors = ["Daniel Rammer <hamersaw@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
gdal = { path = "../gdal" }
gdal-sys = { path = "../gdal/gdal-sys" }

[build-dependencies]
gdal-sys = { path = "../gdal/gdal-sys" }
semver = "0.11"
